small spacing issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 16px;
+      padding: 12px;
       position: relative;
       top: -70px;
       margin-left: -60px;
@@ -218,6 +218,7 @@
       p {
         font-size: 14px;
         color: #A6A5AA;
+        margin: 0;
       }
     }
   }
@@ -291,6 +292,7 @@
       font-size: 14px;
       opacity: 0.9;
       font-weight: 500;
+      margin: 0;
     }
 
     .rating {
